--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -28,3 +28,12 @@
     outline: none;
   }
 }
+
+.xe-text-img {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+  max-width: 100%;
+}
