--- a/src/assets/styles/editor.scss
+++ b/src/assets/styles/editor.scss
@@ -8,6 +8,7 @@
 @import "./table.scss";
 @import "./drag.scss";
 @import "./palette.scss";
+@import "./tooltip.scss";
 
 .#{$editor} {
   color: $color;
